--- a/Video3DModelRegistration/Video3DModelRegistration.vcxproj
+++ b/Video3DModelRegistration/Video3DModelRegistration.vcxproj
@@ -109,7 +109,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>qtmaind.lib;QtCored4.lib;QtGuid4.lib;QtSqld4.lib;QtMultimediad4.lib;QtXmld4.lib;QtOpenGLd4.lib;opengl32.lib;glu32.lib;QtNetworkd4.lib;QtScriptd4.lib;Qt3Supportd4.lib;comdlg32.lib;QAxServerd.lib;QtSvgd4.lib;QtHelpd4.lib;QtWebKitd4.lib;QtXmlPatternsd4.lib;QtTestd4.lib;QtDeclaratived4.lib;OpenThreadsd.lib;osgd.lib;osgDBd.lib;osgUtild.lib;osgViewerd.lib;osgWidgetd.lib;osgSimd.lib;osgTextd.lib;osgGAd.lib;osgShadowd.lib;osgQtd.lib;osgManipulatord.lib;opencv_shape310.lib;opencv_stitching310.lib;opencv_superres310.lib;opencv_videostab310.lib;opencv_objdetect310.lib;opencv_photo310.lib;opencv_calib3d310.lib;opencv_features2d310.lib;opencv_flann310.lib;opencv_highgui310.lib;opencv_ml310.lib;opencv_videoio310.lib;opencv_imgcodecs310.lib;opencv_video310.lib;opencv_imgproc310.lib;opencv_core310.lib</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glu32.lib;OpenThreadsd.lib;osgd.lib;osgDBd.lib;osgUtild.lib;osgViewerd.lib;osgWidgetd.lib;osgSimd.lib;osgTextd.lib;osgGAd.lib;osgShadowd.lib;osgManipulatord.lib;opencv_shape310.lib;opencv_stitching310.lib;opencv_superres310.lib;opencv_videostab310.lib;opencv_objdetect310.lib;opencv_photo310.lib;opencv_calib3d310.lib;opencv_features2d310.lib;opencv_flann310.lib;opencv_highgui310.lib;opencv_ml310.lib;opencv_videoio310.lib;opencv_imgcodecs310.lib;opencv_video310.lib;opencv_imgproc310.lib;opencv_core310.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(SolutionDir)\lib</AdditionalLibraryDirectories>
       <OutputFile>$(SolutionDir)\bin\$(TargetName)$(TargetExt)</OutputFile>
     </Link>
